# ChatbotChambers

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  avatar_styles.html  docker-compose.yml  package-lock.json  package.json  requirements.txt  run.sh  todo.md  vercel.json
.cache/sessions/: 1614e859-f778-45d3-8643-8ca3d21cd040.json  8cd282de-ed85-4c56-9f9f-09f6da52adc9.json  9cbf0235-8095-4da5-9797-6594bda64265.json  eefd26fe-5f35-4225-9fdf-febb446f3694.json  (+1 more)
.github/workflows/: test.yml  (+1 more)
api/: turn.py
backend/: Dockerfile  pyproject.toml
backend/app/: engine.py  main.py  models.py  provider_state.py
backend/app/prompts/: preamble.md  preamble_a.md  preamble_b.md
backend/app/providers/: base.py  claude_code.py  codex_cli.py  litellm_provider.py  mock.py  openrouter.py
backend/app/scenarios/: counting.json  dont_slip_up.json  free_form_conversation.json  twenty_questions.json  two_therapists.json  world_between_us.json
backend/lmparlor/: claude_code.py  codex_cli.py  engine.py  main.py  models.py  openrouter.py
backend/lmparlor/presets/: couple_argument.json  debate.json  negotiation.json
backend/lmparlor/prompts/: preamble.md  preamble_a.md  preamble_b.md
backend/tests/: conftest.py  test_api.py  test_claude_code.py  test_codex_cli.py  test_engine.py  test_hosted_turn_api.py  test_litellm_provider.py  test_models.py  test_openrouter.py  test_provider_state.py  test_websocket.py
frontend/: .gitignore  Dockerfile  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
info/: prompt_construction.md
(+41 files in other folders)
